--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 				<!--TODO: work out how to relative links to work e.g. res/img/avatar.png -->
 				<img src="https://avatars2.githubusercontent.com/u/22042789?s=460&amp;v=4" width="230" alt="Luis Garcia" class="avatar" />
 				<article>
-					<h2>Luis Garcia Calzada</h2>
-					<h3>Security Researcher</h3>
+					<h2><font size="4"> Luis Garcia Calzada</font></h2>
+					<h3>Security Developer</h3>
 					<nav id="social">
 						<ul>
 							<li><a href="https://github.com/luisxciv"><img src="res/img/gh.svg" alt="My GitHub" /></a></li>
 							<li><a href="https://twitter.com/lusiboyz"><img src="res/img/tw.svg" alt="My Twitter" /></a></li>
 						</ul>
+						<ul>Other projects:</ul>
+							<li><font size="3" color="#9370db">
+								<a href="Syrans.html">Python Ransomware</a>
+							</font> </li>
 					</nav>
 				</article>
 			</section>
@@ -41,10 +45,10 @@ if __name__ == __main__:
             print(i)
 						</code>
 					</pre>
-					<pre>@author Luis Garcia</pre>
+
 					<!-- Owner from Discord Server is my God -->
 					<h1 class="title">Pylogin: <span>sqlite3-db grabber</span></h1>
-
+					<pre>@author Luis Garcia</pre>
 					<p>The purpose of this script is to extract confidential data from google chrome's sqlite3 db. The logins table contains the columns; origin_url, username_value and password_vale as seen visually in this image. </p>
 					<code class="cpp"> Don't use this for anything illegal, don't be an a hole"</code>
 
