--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="https://avatars2.githubusercontent.com/u/22042789?s=460&amp;v=4" width="230" alt="Luis Garcia" class="avatar" />
 				<article>
 					<h2><font size="4"> Luis Garcia Calzada</font></h2>
-					<h3>Security Developer</h3>
+					<h3>Security Scripter</h3>
 					<nav id="social">
 						<ul>
 							<li><a href="https://github.com/luisxciv"><img src="res/img/gh.svg" alt="My GitHub" /></a></li>
