--- a/Syrans.html
+++ b/Syrans.html
@@ -26,12 +26,12 @@
 						</ul>
 						<ul>Other projects:</ul>
 							<li><a href="index.html">sqlite3 db-grabber</a> </li>
+						<li><a href="cryptoanalysis.html">cryptcharts</a> </li>
 					</nav>
 				</article>
 			</section>
 
 			<section class="right" id="content">
-			
 				<article>
 					<pre>
 						<code class="cpp">
