--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 						<ul>
 							<li><a href="https://github.com/luisxciv"><img src="res/img/gh.svg" alt="My GitHub" /></a></li>
 							<li><a href="https://twitter.com/lusiboyz"><img src="res/img/tw.svg" alt="My Twitter" /></a></li>
+
 						</ul>
 						<ul>Other projects:</ul>
-							<li><font size="3" color="#9370db">
-								<a href="Syrans.html">Python Ransomware</a>
+							<li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a>
+						<li><a href="cryptoanalysis.html">cryptocharts</a> </li>
+
+
 							</font> </li>
 					</nav>
 				</article>
@@ -67,8 +70,7 @@ os.system('python sendmail.py')
 						</code>
 					</pre>
 
-					<!-- Owner from Discord Server is my God -->
-					<h2 class="title">Pylogin: <span>sqlite3-db grabber</span></h2>
+					<h2 class="title"> Pylogin: <span>sqlite3-db grabber</span></h2>
 					<pre>@author Luis Garcia</pre>
 					<p>The purpose of this script is to extract confidential data from google chrome's sqlite3 db. The logins table contains the columns; origin_url, username_value and password_vale as seen visually in this image. </p>
 					<code class="cpp"> Don't use this for anything illegal, don't be an a hole"</code>
