--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="https://avatars2.githubusercontent.com/u/22042789?s=460&amp;v=4" width="230" alt="Luis Garcia" class="avatar" />
 				<article>
 					<h2><font size="4"> Luis Garcia Calzada</font></h2>
-					<h3>Security Scripter</h3>
+					<h3>Information Security</h3>
 					<nav id="social">
 						<ul>
 							<li><a href="https://github.com/luisxciv"><img src="res/img/gh.svg" alt="My GitHub" /></a></li>
@@ -26,8 +26,7 @@
 
 						</ul>
 						<ul>Other projects:</ul>
-							<li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a>
-						    <li><a href="cryptoanalysis.html">cryptocharts</a> </li>
+							<li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a
 
 
 							</font> </li>
