--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 						</ul>
 						<ul>Other projects:</ul>
-							<li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a
+							<li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a>
 
 
 							</font> </li>
