--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="right" id="content">
         <article>
             <h2 class="title"> pentestlib: <span>a python pentesting library</span></h2>
-            <pre>@author Luis Garcia</pre>
+            <pre>@author luisxciv</pre>
             <p>The goal of this project is to build a library of pentest python scripts. You can find all of the scripts inside my pentestlib repo.
             </p>
             <h3>third-party libraries: <span>Some of the scripts require the use of third-party libraries, you can use  pip  to easily install modules. </span></h3>
