--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </section>
     <section class="right" id="content">
         <article>
-            <h2 class="title"> pentestlib: <span>a python pentesting library</span></h2>
+            <h2 class="title"> pentestlib: <span>a python penetration testing library</span></h2>
             <pre>@author luisxciv</pre>
-            <p>The goal of this project is to build a library of pentest python scripts. You can find all of the scripts inside my pentestlib repo.
+            <p>The goal of this project is to build a library of pentest python scripts. You can find all of the scripts inside my pentestlib repo @ github.com/luisxciv/pentestlib.
             </p>
             <h3>third-party libraries: <span>Some of the scripts require the use of third-party libraries, you can use  pip  to easily install modules. </span></h3>
 
