--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<code class="cpp">
 import nmap import pydf import python-nmap import pygeoip import mechanize import BeautifulSoup4 import python-bluez import bluetooth import python-obexftp</code>
 					</pre>
-            <h3>banner-grabbing</h3><span>The purpose of banner grabbing is to perform vulnerability analysis by obtaining information provided by the network host/ip aka 'banners'. The script iterates through a list of ports and range a subnet of IP's using range(0,255) and uses the socket.recv module to read the first 2048 bytes of the banner to check it against a vulnerable list of vulnerable banners.  </span></h3>
+            <h3>banner-grabbing</h3><span>The purpose of banner grabbing is to perform vulnerability analysis by obtaining information provided by the network host. The script iterates through a list of ports and range a subnet of IP's using range(0,255) and uses the socket.recv module to read the first 2048 bytes of the banner to check it against a vulnerable list of vulnerable banners.  </span></h3>
             <br></br>
             <code class="cpp">
                     <h4>  Usage: bannergrabber.py vulnerablebanners.txt  </h4>
