--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ import nmap import pydf import python-nmap import pygeoip import mechanize impor
                     <h4>  Usage: bannergrabber.py vulnerablebanners.txt  </h4>
             </code>
             <pre>
+                <pre>
+						<code class="cpp">
 import socket
 import sys
 
@@ -89,8 +91,6 @@ def vulns(banner, filename):
 
 if __name__ == '__main__':
     main()
-
-
 						</code>
 					</pre>
             </br>
