--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                     <li><a href="https://twitter.com/lusiboyz"><img src="res/img/tw.svg" alt="My Twitter" /></a></li>
 
                 </ul>
-                <ul>Other projects:</ul>
-                <li><font size="3" color="#9370db"><a href="Syrans.html">Python Ransomware</a></font></li>
-                <li><font size="3" color="#9370db"><a href="sqlite3db.html">sqlite3-db grabber</a></font></li>
+                <ul></ul>
+
 
             </nav>
         </article>
@@ -38,7 +37,7 @@
             <pre>@author luisxciv</pre>
             <p>The goal of this project is to build a library of pentest python scripts. You can find all of the scripts inside my pentestlib repo @ github.com/luisxciv/pentestlib.
             </p>
-            <h2>third-party libraries: <span>Some of the scripts require the use of third-party libraries, you can use  pip  to easily install modules. </span></h2>
+            <h3>third-party libraries: <span>Some of the scripts require the use of third-party libraries, you can use  pip  to easily install modules. </span></h3>
 
             <pre>
 
@@ -155,44 +154,69 @@ def main():
         t.start()
 if __name__ == '__main__':
     main()
-
 						</code>
-					</pre>
             </br>
-
+            </pre>
             <h2>Port scanner</h2><span> Scans and host and lists open ports. It also has a banner grabber to get information about the port. If you're going to portscan a system or a network don't use this script.Nmap is a powerful port scanning tool with lots of functionality. If you're not using nmap already then check it out at https://nmap.org/</span>
             <code class="cpp">
                 <h3> Usage: python portscanner.py -h 10.10.10.10 -p 22 80 443  </h3>
             </code>
             <pre>
 						<code class="c">
-import zipfile
+import optparse
 from threading import Thread
+from socket import *
 
-def extraction(file, password):
+def connscan(tgtHost, tgtPorts):
     try:
-        file.extractfile(pwd = password)
+        connskt = socket(AF_INET, SOCK_STREAM)
+        connskt.connect((tgthost, tgtport))
+        connskt.send('Hello\r\n')
+        results = connskt.recv(100)
         print
-        "Found password" + password
+        '%d/tcp open' % tgtport
+        print
+        'Port response' + str(results)
+        connskt.close()
     except:
-        pass
-def main():
-    file = zipfile.ZipFile('secret.zip')
-    passfile = open('dictionary.txt')
-    for line in passfile.readlines():
-        password = line.strip('\n')
-        t = Thread(target=extraction, args=(file, password))
+        print
+        '%d/tcp closed' % tgtport
+def portscan(tgthost, tgtPorts):
+    try:
+        tgtip = gethostbyname(tgthost)
+    except:
+        print('could not get host by name')
+        return
+    try:
+        tgtname = gethostbyaddr(tgtip)
+        print('scan results for' + tgtname[0])
+    except:
+        print('could not get host by ip')
+    setdefaulttimeout(1)
+    for tgtport in tgtPorts:
+        t = Thread(target=connscan, args=(tgthost,tgtPorts))
         t.start()
-if __name__ == '__main__':
-    main()
 
-						</code>
-					</pre>
+def main():
+    parser = optparse.OptionParser('usage %prog -H' +\
+                               'target_host -p target_port')
+    parser.add_option('-H', dest='tgthost', type='string', \
+                  help = 'specify target port')
+    parser.add_option('-p', dest='tgtport', type='int', \
+                  help = 'specify port number')
+    tgthost = optparse.Option.tgthost
+    tgtport = optparse.Option.tgtport
+    if (tgthost == None) or (tgtport == None):
+     print
+    parser.usage
+    exit(0)
+    portscan(tgthost, tgtport)
+
+    if __name__ == '__main__':
+        main()
+                        </code>
+            </pre>
             </br>
-
-
-
-
         </article>
         <hr />
     </section>
