--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 						</div>
 						<div class="v3-m-2">
 							<ul>
-								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu1'>Drop1</a>
+								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu1'>Menu 1 </a>
 								</li>
-								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-mega2'>Drop2</a>
+								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-mega2'>Menu 2</a>
 								</li>
-								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-mega3'>Drop3</a>
+								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-mega3'>Menu 3 </a>
 								</li>
-								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu4'>Drop4</a>
+								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu4'>Menu 4</a>
 								</li>
-								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu5'>Drop5</a>
+								<li><a class='dropdown-button ed-sub-menu' href='#' data-activates='drop-menu5'>Menu 5</a>
 								</li>
 							</ul>
 						</div>
@@ -356,7 +356,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2><span>500%</span> mas visibilidad al anunciarte en tianguis  <a href="promocion.html">Contratar</a></h2> </div>
+					<h2><span>Anunciate!</span> para recivir mas visitas <a href="promocion.html">Contratar</a></h2> </div>
 			</div>
 		</div>
 	</section>
