--- a/index.html
+++ b/index.html
@@ -399,6 +399,40 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6">
+							<div>
+								<!--POPULAR LISTINGS-->
+								<div class="home-list-pop">
+									<!--POPULAR LISTINGS IMAGE-->
+									<div class="col-md-3"> <img src="images/services/amazon.jpg" alt="" /> </div>
+									<!--POPULAR LISTINGS: CONTENT-->
+									<div class="col-md-9 home-list-pop-desc"> <a href="automobile-listing-details.html"><h3>Amazon</h3></a>
+										<h4>U.S.A</h4>
+										<p>una tienda en linea donde se encuentra de todo .</p> <span class="home-list-pop-rat">5.0</span>
+										<div class="hom-list-share">
+											<ul>
+
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div>
+										<!--POPULAR LISTINGS-->
+										<div class="home-list-pop">
+											<!--POPULAR LISTINGS IMAGE-->
+											<div class="col-md-3"> <img src="images/services/amazon.jpg" alt="" /> </div>
+											<!--POPULAR LISTINGS: CONTENT-->
+											<div class="col-md-9 home-list-pop-desc"> <a href="automobile-listing-details.html"><h3>Amazon</h3></a>
+												<h4>U.S.A</h4>
+												<p>una tienda en linea donde se encuentra de todo .</p> <span class="home-list-pop-rat">5.0</span>
+												<div class="hom-list-share">
+													<ul>
+
+													</ul>
+												</div>
+											</div>
+										</div>
 						<!--POPULAR LISTINGS-->
 							</div>
 						</div>
