--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 							<!--POPULAR LISTINGS IMAGE-->
 							<div class="col-md-3"> <img src="images/services/amazon.jpg" alt="" /> </div>
 							<!--POPULAR LISTINGS: CONTENT-->
-							<div class="col-md-9 home-list-pop-desc"> <a href="automobile-listing-details.html"><h3>Amazon</h3></a>
+							<div class="col-md-9 home-list-pop-desc"> <a href="tienda1.html"><h3>Amazon</h3></a>
 								<h4>U.S.A</h4>
 								<p>una tienda en linea donde se encuentra de todo .</p> <span class="home-list-pop-rat">5.0</span>
 								<div class="hom-list-share">
@@ -390,7 +390,7 @@
 							<!--POPULAR LISTINGS IMAGE-->
 							<div class="col-md-3"> <img src="images/services/mercado.jpg" alt="" /> </div>
 							<!--POPULAR LISTINGS: CONTENT-->
-							<div class="col-md-9 home-list-pop-desc"> <a href="property-listing-details.html"><h3>Mercadolibre</h3></a>
+							<div class="col-md-9 home-list-pop-desc"> <a href="tienda2.html"><h3>Mercadolibre</h3></a>
 								<h4>Mexico</h4>
 								<p>Presente en 12 países latinoamericanos y en Portugal, Mercado Libre cuenta con más de 120 millones de usuarios registrados en América Latina</p> <span class="home-list-pop-rat">4.2</span>
 								<div class="hom-list-share">
@@ -399,40 +399,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div>
-								<!--POPULAR LISTINGS-->
-								<div class="home-list-pop">
-									<!--POPULAR LISTINGS IMAGE-->
-									<div class="col-md-3"> <img src="images/services/amazon.jpg" alt="" /> </div>
-									<!--POPULAR LISTINGS: CONTENT-->
-									<div class="col-md-9 home-list-pop-desc"> <a href="automobile-listing-details.html"><h3>Amazon</h3></a>
-										<h4>U.S.A</h4>
-										<p>una tienda en linea donde se encuentra de todo .</p> <span class="home-list-pop-rat">5.0</span>
-										<div class="hom-list-share">
-											<ul>
 
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div>
-										<!--POPULAR LISTINGS-->
-										<div class="home-list-pop">
-											<!--POPULAR LISTINGS IMAGE-->
-											<div class="col-md-3"> <img src="images/services/amazon.jpg" alt="" /> </div>
-											<!--POPULAR LISTINGS: CONTENT-->
-											<div class="col-md-9 home-list-pop-desc"> <a href="automobile-listing-details.html"><h3>Amazon</h3></a>
-												<h4>U.S.A</h4>
-												<p>una tienda en linea donde se encuentra de todo .</p> <span class="home-list-pop-rat">5.0</span>
-												<div class="hom-list-share">
-													<ul>
-
-													</ul>
-												</div>
-											</div>
-										</div>
 						<!--POPULAR LISTINGS-->
 							</div>
 						</div>
