--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 			<div class="row">
 				<div class="dir-hr1">
 					<div class="dir-ho-t-tit dir-ho-t-tit-2">
-						<h1>Tianguis MX</h1>
-						<p>Slogan o lo que sea  </p>
+						<h1>Tianguis</h1>
+						<p>Slogan</p>
 					</div>
 						<form class="tourz-search-form">
 							<div class="input-field">
