--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 				<div class="dir-hr1">
 					<div class="dir-ho-t-tit dir-ho-t-tit-2">
 						<h1>Tianguis</h1>
-						<p>Slogan</p>
+						<p>test</p>
 					</div>
 						<form class="tourz-search-form">
 							<div class="input-field">
