--- a/index.html
+++ b/index.html
@@ -266,14 +266,14 @@
 				<div class="dir-hr1">
 					<div class="dir-ho-t-tit dir-ho-t-tit-2">
 						<h1>Tianguis</h1>
-						<p>test</p>
+						<p>Ten acceso a todos los e-commerce de mexico en un mismo lugar</p>
 					</div>
 						<form class="tourz-search-form">
 							<div class="input-field">
 							</div>
 							<div class="input-field">
 								<input type="text" id="select-search" class="autocomplete">
-								<label for="select-search" class="search-hotel-type">Busca entre miles de negocios e-commerce de mexico</label>
+								<label for="select-search" class="search-hotel-type">Busca un producto o categoria</label>
 							</div>
 							<div class="input-field">
 								<input type="submit" value="search" class="waves-effect waves-light tourz-sear-btn"> </div>
