--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
 						</div>
 						<div class="v3-mob-m-2">
 							<div class="v3-top-ri">
-								<ul>
-									<li><a href="login.html" class="v3-menu-sign"><i class="fa fa-sign-in"></i> Sign In</a> </li>
-									<li><a href="price.html" class="v3-add-bus"><i class="fa fa-plus" aria-hidden="true"></i> Add Listing</a> </li>
+								<ul
+									<li><a href="price.html" class="v3-add-bus"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</a> </li>
 									<li><a href="#" class="ts-menu-5" id="v3-mob-menu-btn"><i class="fa fa-bars" aria-hidden="true"></i>Menu</a> </li>
 								</ul>
 							</div>
@@ -238,25 +237,25 @@
 		</div>
 		<div class="mob-right-nav" data-wow-duration="0.5s">
 			<div class="mob-right-nav-close"><i class="fa fa-times" aria-hidden="true"></i> </div>
-			<h5>Business</h5>
+			<h5>General</h5>
 			<ul class="mob-menu-icon">
-				<li><a href="price.html">Add Business</a> </li>
-				<li><a href="#!" data-toggle="modal" data-target="#register">Register</a> </li>
-				<li><a href="#!" data-toggle="modal" data-target="#sign-in">Sign In</a> </li>
+				<li><a href="agregar.html">Agregar mi negocio</a> </li>
+				<li><a href="#!" data-toggle="modal" data-target="#register">Contactanos</a> </li>
+				<li><a href="#!" data-toggle="modal" data-target="#sign-in">Acerca de</a> </li>
 			</ul>
 			<h5>All Categories</h5>
 			<ul>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Help Services</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Appliances Repair & Services</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Furniture Dealers</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Packers and Movers</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Pest Control </a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Product Dealers</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Interior Designers</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Carpenters</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Plumbing Contractors</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Modular Kitchen</a> </li>
-				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Internet Service Providers</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria </a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria  </a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria </a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categorias</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
+				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria</a> </li>
 			</ul>
 		</div>
 	</section>
@@ -266,7 +265,7 @@
 				<div class="dir-hr1">
 					<div class="dir-ho-t-tit dir-ho-t-tit-2">
 						<h1>Tianguis</h1>
-						<p>Ten acceso a todos los e-commerce de mexico en un mismo lugar</p>
+						<p>Todas las eCommerce de Mexico en un solo lugar</p>
 					</div>
 						<form class="tourz-search-form">
 							<div class="input-field">
